k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carekids-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: caremykids-ip
    networking.gke.io/managed-certificates: carekids-cert
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
